--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,23 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.FudBox"
             tools:targetApi="31">
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".view.homeView.HomeActivity"
+                android:exported="true"
+                android:label="@string/title_activity_home"
+                />
+
     </application>
 
 </manifest>
