--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'com.google.gms.google-services' version '4.3.15' apply false
+    id "org.sonarqube" version "4.2.1.3168"
 }
