--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-                android:name=".view.homeView.HomeActivity"
+                android:name=".view.home.HomeActivity"
                 android:exported="true"
                 android:label="@string/title_activity_home"
                 />
