Implemented Place activity but does not work properly at the moment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <application
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +17,14 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.FudBox"
             tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA9lAgWMIKYTYuwE0_N8q3W5AYAZnZPHNk" />
 
         <activity
                 android:name=".MainActivity"
@@ -27,6 +41,12 @@
                 android:exported="true"
                 android:label="@string/title_activity_home"
                 />
+
+        <activity
+            android:name=".view.place.PlaceActivity"
+            android:exported="true"
+            android:label="@string/title_activity_home"
+            />
 
     </application>
 
