--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,9 @@ dependencies {
     implementation 'com.github.ahmmedrejowan.CuteToast:CuteToast:1.2'
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+    // Places and Maps SDKs
+    implementation 'com.google.android.libraries.places:places:3.1.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.4.0'
 }
