--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.1"
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
@@ -74,4 +80,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
 }
