--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
+    implementation "com.google.android.gms:play-services-pay:16.1.0"
+    implementation "com.google.android.gms:play-services-wallet:19.2.0"
+
 }
